feat: add Tools menu to navigation
- Add Tools menu item to desktop navigation
- Add Tools menu item to mobile navigation (both versions)
- Add Tools menu item to mobile menu
- Add Tools description translations in all languages (EN, ZH, JA, ES)
- Improve navigation accessibility for Domain Tracker and other tools

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1354,6 +1354,7 @@
     "communityDescription": "Connect with other nomads",
     "dashboardDescription": "Manage your account",
     "taxDescription": "Tax optimization and strategy guides",
+    "toolsDescription": "Essential tools and utilities for digital nomads",
     "visaGuideDescription": "Visa information and guides",
     "citiesDescription": "Browse global cities",
     "homeDescription": "Explore digital nomad cities",
