--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1569,6 +1569,7 @@
     "citiesDescription": "Navega por ciudades globales",
     "visaGuideDescription": "Información y guías de visa",
     "taxDescription": "Guías de optimización y estrategias fiscales",
+    "toolsDescription": "Herramientas esenciales y utilidades para nómadas digitales",
     "dashboardDescription": "Gestiona tu cuenta",
     "communityDescription": "Conéctate con otros nómadas",
     "visaDescription": "Guías de solicitud de visa para varios países",
