--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1534,6 +1534,7 @@
     "citiesDescription": "世界中の都市を閲覧",
     "visaGuideDescription": "ビザ情報とガイド",
     "taxDescription": "税金最適化と戦略ガイド",
+    "toolsDescription": "デジタルノマドの必須ツールとユーティリティ",
     "dashboardDescription": "アカウント管理",
     "communityDescription": "他のノマドとつながる",
     "visaDescription": "各国のビザ申請ガイド",
