--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -115,6 +115,7 @@
     "citiesDescription": "探索全球数字游民城市",
     "visaGuideDescription": "各国签证申请指南",
     "taxDescription": "税务策略和计算工具",
+    "toolsDescription": "数字游民必备工具和实用程序",
     "dashboardDescription": "个人仪表板和设置"
   },
   "common": {
