--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -560,8 +560,89 @@
     }
   },
   "tools": {
-    "title": "游民必备工具",
-    "description": "数字游民实际使用的精选工具和服务。从银行到保险，远程工作平台到语言学习 - 游民生活方式所需的一切。",
+    "title": "游民工具中心",
+    "subtitle": "让数字游民生活更轻松的必备计算器、追踪器和规划工具。",
+    "searchPlaceholder": "按名称、类别或功能搜索工具...",
+    "filterByCategory": "按类别筛选：",
+    "categories": {
+      "all": "所有工具",
+      "calculators": "计算器",
+      "trackers": "追踪器",
+      "planners": "规划器"
+    },
+    "quickAccess": {
+      "title": "快速访问",
+      "subtitle": "固定您喜欢的工具"
+    },
+    "status": {
+      "live": "✅ 已上线",
+      "comingSoon": "🚧 即将推出",
+      "inDesign": "🎨 设计中",
+      "planned": "📋 计划中"
+    },
+    "actions": {
+      "launchTool": "启动工具",
+      "getNotified": "获取通知",
+      "joinWaitlist": "加入等待列表"
+    },
+    "features": {
+      "keyFeatures": "主要功能：",
+      "moreFeatures": "更多功能"
+    },
+    "popular": "热门",
+    "toolsFound": "个工具",
+    "noToolsFound": {
+      "title": "未找到工具",
+      "description": "尝试调整您的搜索或筛选条件"
+    },
+    "cta": {
+      "title": "为下一个工具投票",
+      "description": "我们正在为数字游民构建一个全面的工具箱。帮助我们确定优先开发哪些工具！",
+      "voteForTools": "为工具投票",
+      "viewRoadmap": "查看路线图"
+    },
+    "tools": {
+      "costCalculator": {
+        "title": "生活成本计算器",
+        "description": "规划您的预算并比较不同城市的成本"
+      },
+      "visaCounter": {
+        "title": "签证天数计数器",
+        "description": "追踪您的签证天数，避免逾期居留"
+      },
+      "taxCalculator": {
+        "title": "税务计算器",
+        "description": "计算各国潜在的税务义务"
+      },
+      "travelTracker": {
+        "title": "旅行追踪器",
+        "description": "追踪您在不同目的地的旅行和停留"
+      },
+      "wifiTracker": {
+        "title": "WiFi速度追踪器",
+        "description": "监控全球互联网速度"
+      },
+      "timeZoneManager": {
+        "title": "时区管理器",
+        "description": "管理多个时区以进行全球工作"
+      },
+      "tripPlanner": {
+        "title": "旅行规划器",
+        "description": "自信地规划您的下一个目的地"
+      },
+      "budgetPlanner": {
+        "title": "预算规划器",
+        "description": "高效地规划和追踪您的支出"
+      },
+      "workScheduler": {
+        "title": "工作日程规划器",
+        "description": "规划跨时区的工作日程"
+      },
+      "domainTracker": {
+        "title": "域名追踪器",
+        "description": "通过详细分析追踪域名投资、成本和利润"
+      }
+    },
     "categories": {
       "banking": "银行服务",
       "insurance": "保险服务",
