fix: resolve translation key conflicts and add missing Chinese translations
- Fix duplicate categories definitions in tools sections for both EN and ZH locales
- Add missing Chinese translation keys for:
  - notifications (welcome, visaExpiry)
  - auth (signIn)
  - mobileMenu (title, all descriptions)
  - localNomads (comprehensive translations for all features)
  - preferences (appearance theme settings)
  - meetup (categories, status, organizer, rating)
- Remove conflicting duplicate categories that were overriding tools.categories
- Ensure all translation keys are properly structured and accessible
- Build passes successfully with no translation key conflicts

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -12,6 +12,13 @@
     "dashboard": "数据统计",
     "language": "语言"
   },
+  "notifications": {
+    "welcome": "欢迎来到数字游民社区！",
+    "visaExpiry": "您的签证即将到期，请及时续签"
+  },
+  "auth": {
+    "signIn": "登录"
+  },
   "home": {
     "placeCategories": {
       "cafe": "咖啡店",
@@ -111,6 +118,7 @@
     "signIn": "登录"
   },
   "mobileMenu": {
+    "title": "菜单",
     "homeDescription": "发现最适合数字游民的城市",
     "citiesDescription": "探索全球数字游民城市",
     "visaGuideDescription": "各国签证申请指南",
@@ -642,12 +650,6 @@
         "title": "域名追踪器",
         "description": "通过详细分析追踪域名投资、成本和利润"
       }
-    },
-    "categories": {
-      "banking": "银行服务",
-      "insurance": "保险服务",
-      "remoteWork": "远程工作平台",
-      "languageLearning": "语言学习"
     },
     "missingTool": {
       "title": "缺少工具？",
@@ -1393,6 +1395,65 @@
     "viewAllCities": "查看所有城市"
   },
   "localNomads": {
+    "discover": "发现",
+    "myMeetups": "我的聚会",
+    "realtimeData": "实时数据",
+    "favorites": "收藏",
+    "pageTitle": "本地游民",
+    "stats": {
+      "cities": "城市",
+      "nomads": "游民",
+      "meetups": "聚会",
+      "activeCities": "活跃城市",
+      "citiesDescription": "城市",
+      "digitalNomads": "数字游民",
+      "nomadsDescription": "游民",
+      "meetupActivities": "聚会活动",
+      "meetupsDescription": "聚会",
+      "communityRating": "社区评分",
+      "days": "天"
+    },
+    "avgConnectionTime": "平均连接时间",
+    "globalHotspots": "全球热点",
+    "exploreGlobal": "探索全球",
+    "enableLocationToDiscover": "启用定位以发现",
+    "searchAndConnect": "搜索和连接",
+    "searchNomads": "搜索游民",
+    "searchPlaceholder": "搜索游民...",
+    "filters": "筛选",
+    "filterByCity": "按城市筛选",
+    "filterByInterest": "按兴趣筛选",
+    "filterByLanguage": "按语言筛选",
+    "sortBy": "排序方式",
+    "sortByOnlineStatus": "按在线状态排序",
+    "sortByDistance": "按距离排序",
+    "sortByActivity": "按活跃度排序",
+    "startConversation": "开始对话",
+    "scheduleMeetup": "安排聚会",
+    "hotMeetups": "热门聚会",
+    "viewAllMeetups": "查看所有聚会",
+    "lisbonCoffeeChat": "里斯本咖啡聊天",
+    "peopleJoined": "人已加入",
+    "lisbonCoffeeChatDesc": "在里斯本享受咖啡和对话",
+    "joinMeetup": "加入聚会",
+    "chiangMaiDevCowork": "清迈开发者联合办公",
+    "chiangMaiDevCoworkDesc": "在清迈与其他开发者一起工作",
+    "baliBeachCoworking": "巴厘岛海滩联合办公",
+    "baliBeachCoworkingDesc": "在巴厘岛海滩边工作",
+    "hotMeetupActivities": "热门聚会活动",
+    "viewAllActivities": "查看所有活动",
+    "activeUsers": "活跃用户",
+    "viewAllUsers": "查看所有用户",
+    "coffeeHero": "咖啡英雄",
+    "nomadExplorer": "游民探索者",
+    "communityBuilder": "社区建设者",
+    "meetupMaster": "聚会大师",
+    "readyToConnect": "准备连接",
+    "readyToConnectDescription": "与全球数字游民建立联系",
+    "mapLoadFailed": "地图加载失败",
+    "mapLoadFailedDescription": "无法加载地图，请检查网络连接",
+    "retry": "重试",
+    "switchToListView": "切换到列表视图",
     "tagCategories": {
       "lifestyle": "生活方式",
       "work": "工作",
@@ -1504,7 +1565,14 @@
     "costOfLiving": "生活成本",
     "climateComfort": "气候舒适度",
     "socialAtmosphere": "社交氛围",
-    "visaConvenience": "签证便利性"
+    "visaConvenience": "签证便利性",
+    "appearance": {
+      "theme": "主题",
+      "language": "语言",
+      "light": "浅色",
+      "dark": "深色",
+      "auto": "自动"
+    }
   },
   "domainTracker": {
     "title": "域名追踪器",
@@ -1577,5 +1645,16 @@
       "loginButton": "登录",
       "signupButton": "注册"
     }
+  },
+  "meetup": {
+    "categories": {
+      "coffee": "咖啡",
+      "coworking": "联合办公"
+    },
+    "status": {
+      "upcoming": "即将开始"
+    },
+    "organizer": "组织者",
+    "rating": "评分"
   }
 }
