fix: add missing Chinese translation key for elegantEnvironment
- Add missing recommendationForm.place.suggestedTags.elegantEnvironment translation key
- Resolve Chinese translation key warning for elegantEnvironment tag

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -182,7 +182,8 @@
         "历史建筑": "历史建筑",
         "优雅环境": "优雅环境",
         "价格实惠": "价格实惠",
-        "清迈": "清迈"
+        "清迈": "清迈",
+        "elegantEnvironment": "优雅环境"
       },
       "fields": {
         "name": "名称",
