fix: add missing Chinese translation keys for cityComparison section
- Add comprehensive cityComparison translation keys including title, overallScoreLabel, overallScoreDescription, points, wifiSpeed, averageWifiSpeed, costOfLiving, monthlyCostUSD, perMonth, visaConvenience, stayDays, days, climateComfort, climateScoreByLatitude, socialAtmosphere, socialScoreByVisaAndCost, metricsSelector, dataTable, chartView, addCity, and loadingCities
- Resolve all Chinese translation key warnings for cityComparison functionality
- Ensure complete multilingual support for city comparison features

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -209,10 +209,31 @@
     }
   },
   "cityComparison": {
+    "title": "城市对比",
     "defaultExample": "默认示例",
     "defaultExampleDescription": "选择城市开始对比",
     "startComparing": "开始对比",
-    "addCitiesNow": "立即添加城市"
+    "addCitiesNow": "立即添加城市",
+    "overallScoreLabel": "综合评分",
+    "overallScoreDescription": "基于多个维度的综合评分",
+    "points": "分",
+    "wifiSpeed": "WiFi速度",
+    "averageWifiSpeed": "平均WiFi速度",
+    "costOfLiving": "生活成本",
+    "monthlyCostUSD": "月成本（美元）",
+    "perMonth": "/月",
+    "visaConvenience": "签证便利性",
+    "stayDays": "停留天数",
+    "days": "天",
+    "climateComfort": "气候舒适度",
+    "climateScoreByLatitude": "基于纬度的气候评分",
+    "socialAtmosphere": "社交氛围",
+    "socialScoreByVisaAndCost": "基于签证和成本的社交评分",
+    "metricsSelector": "指标选择器",
+    "dataTable": "数据表格",
+    "chartView": "图表视图",
+    "addCity": "添加城市",
+    "loadingCities": "正在加载城市..."
   },
     "locationPlaceholder": "输入城市名称",
         "wifiSpeedTest": "WiFi速度测试",
